2025-08-14  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el (shellcheck): Fix handling of remote files.

2025-08-14  Zhengyi Fu  <i@fuzy.me>

	* init.el (ws-butler-convert-leading-tabs-or-spaces):  Set to nil.

2025-08-14  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el (+gptel-shellcheck-fix): Set
	`flymake-show-diagnostics-at-end-of-line' to `fancy'.

2025-08-14  Zhengyi Fu  <i@fuzy.me>

	* init.el: Remove `dotemacs-theme-refresh' from
	`after-make-frame-functions'.

2025-08-14  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/tui/tui.el (tui-foot-exec): Simplify code.

2025-08-14  Zhengyi Fu  <i@fuzy.me>

	Fix straight flymake integration

	* init.el (straight-flymake-byte-compile): Use bootstrap.el
	instead straight.el to avoid emacs-verions-changed error.  Use
	map-apply to convert package names from strings to symbols.
	(trusted-content): Add straight repo dir and build dir.

2025-08-14  Zhengyi Fu  <i@fuzy.me>

	* init.el (+import-env-var-for-display): Fix importing display name.

2025-08-14  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el (kimi-assistant): Use kimi-k2-turbo-preview.

2025-08-13  Zhengyi Fu  <i@fuzy.me>

	* init.el (dotemacs): Define a theme.  Put my face customizations
	in a theme `dotemacs'.  Otherwise, the customizations will be
	written to `custom-file'.

2025-08-13  Zhengyi Fu  <i@fuzy.me>

	Implement elisp flymake backend for straight

	* init.el (straight-flymake-byte-compile): New function.  Advice
	`elisp-flymake-byte-compile' to load packages installed with
	`straight'.
	(straight--add-package-to-load-path): Remove advice.

2025-08-13  Zhengyi Fu  <i@fuzy.me>

	Auto-quit reviewing the repo only when the local branch equals the
	upstream branch

	* init.el (+straight-repo-up-to-date-p): Add optional arg to check
	if the local branch is strictly equal to the upstream branch.
	(+straight-review-updated-repos): Use it in `magit-pre-refresh-hook'.

2025-08-12  Zhengyi Fu  <i@fuzy.me>
