@@ -1,3 +1,11 @@
+2025-08-15  Zhengyi Fu  <i@fuzy.me>
+
+	Update gptel-config.el
+
+	* site-lisp/gptel-config.el ("Moonshot"): Update backend definition.
+	($websearch): Change category to "internal".
+	(kimi-agent): Change temperature to 0.2.  Update tools and system prompt.
+
 2025-08-14  Zhengyi Fu  <i@fuzy.me>
 
 	* site-lisp/gptel-config.el (shellcheck): Fix handling of remote files.
